<resources>
    <string name="app_name">Currency Converter</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="currency_exchange">CURRENCY EXCHANGE</string>
    <string name="sell">Sell</string>
    <string name="amount">Amount</string>
    <string name="receive">Receive</string>
    <string name="submit">Submit</string>
    <string-array name="currencies">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
<!--        "BTC":2.8066415e-5,-->
<!--        "BTN":83.148492,-->
<!--        "BWP":12.611242,-->
<!--        "BYN":3.583319,-->
<!--        "BYR":21382.197191,-->
<!--        "BZD":2.19507,-->
<!--        "CAD":1.390743,-->
<!--        "CDF":2197.679595,-->
<!--        "CHF":1.019969,-->
<!--        "CLF":0.031865,-->
<!--        "CLP":879.245108,-->
<!--        "CNY":6.916273,-->
<!--        "COP":4166.626583,-->
<!--        "CRC":707.167314,-->
<!--        "CUC":1.090928,-->
<!--        "CUP":28.909603,-->
<!--        "CVE":110.515301,-->
<!--        "CZK":25.081431,-->
<!--        "DJF":193.88023,-->
<!--        "DKK":7.439373,-->
<!--        "DOP":59.925127,-->
<!--        "DZD":156.15929,-->
<!--        "EGP":17.115662,-->
<!--        "ERN":16.363948,-->
<!--        "ETB":55.501028,-->
<!--        "EUR":1,-->
<!--        "FJD":2.309539,-->
<!--        "FKP":0.794109,-->
<!--        "GBP":0.837233,-->
<!--        "GEL":3.513216,-->
<!--        "GGP":0.794108,-->
<!--        "GHS":7.749801,-->
<!--        "GIP":0.794108,-->
<!--        "GMD":58.282895,-->
<!--        "GNF":9763.809819,-->
<!--        "GTQ":8.394199,-->
<!--        "GYD":227.832235,-->
<!--        "HKD":8.541479,-->
<!--        "HNL":26.706352,-->
<!--        "HRK":7.569302,-->
<!--        "HTG":116.084794,-->
<!--        "HUF":382.534476,-->
<!--        "IDR":15629.731589,-->
<!--        "ILS":3.546445,-->
<!--        "IMP":0.794108,-->
<!--        "INR":83.715997,-->
<!--        "IQD":1593.300969,-->
<!--        "IRR":46146.272893,-->
<!--        "ISK":144.908444,-->
<!--        "JEP":0.794109,-->
<!--        "JMD":166.877663,-->
<!--        "JOD":0.774673,-->
<!--        "JPY":127.945727,-->
<!--        "KES":124.588176,-->
<!--        "KGS":114.522616,-->
<!--        "KHR":4423.715159,-->
<!--        "KMF":492.16187,-->
<!--        "KPW":981.835757,-->
<!--        "KRW":1349.871618,-->
<!--        "KWD":0.331392,-->
<!--        "KYD":0.90752,-->
<!--        "KZT":571.873636,-->
<!--        "LAK":12512.949451,-->
<!--        "LBP":1648.073161,-->
<!--        "LKR":277.685092,-->
<!--        "LRD":167.839755,-->
<!--        "LSL":16.451617,-->
<!--        "LTL":3.221228,-->
<!--        "LVL":0.659892,-->
<!--        "LYD":5.056496,-->
<!--        "MAD":10.62292,-->
<!--        "MDL":20.037195,-->
<!--        "MGA":4385.532659,-->
<!--        "MKD":60.95191,-->
<!--        "MMK":1936.335209,-->
<!--        "MNT":3118.780188,-->
<!--        "MOP":8.778301,-->
<!--        "MRO":389.461261,-->
<!--        "MUR":48.549446,-->
<!--        "MVR":16.855257,-->
<!--        "MWK":877.655999,-->
<!--        "MXN":22.840714,-->
<!--        "MYR":4.575904,-->
<!--        "MZN":69.634373,-->
<!--        "NAD":16.451612,-->
<!--        "NGN":453.652089,-->
<!--        "NIO":43.321179,-->
<!--        "NOK":9.823488,-->
<!--        "NPR":133.034938,-->
<!--        "NZD":1.604222,-->
<!--        "OMR":0.420012,-->
<!--        "PAB":1.089099,-->
<!--        "PEN":4.039167,-->
<!--        "PGK":3.829568,-->
<!--        "PHP":57.133055,-->
<!--        "PKR":194.95295,-->
<!--        "PLN":4.787064,-->
<!--        "PYG":7593.819309,-->
<!--        "QAR":3.972112,-->
<!--        "RON":4.947583,-->
<!--        "RSD":117.591583,-->
<!--        "RUB":145.093852,-->
<!--        "RWF":1107.499631,-->
<!--        "SAR":4.09255,-->
<!--        "SBD":8.780178,-->
<!--        "SCR":15.725338,-->
<!--        "SDG":487.645378,-->
<!--        "SEK":10.638609,-->
<!--        "SGD":1.488021,-->
<!--        "SHP":1.502649,-->
<!--        "SLL":12780.226905,-->
<!--        "SOS":637.102571,-->
<!--        "SRD":22.450258,-->
<!--        "STD":22580.015886,-->
<!--        "SVC":9.528947,-->
<!--        "SYP":2740.411967,-->
<!--        "SZL":16.451604,-->
<!--        "THB":36.353558,-->
<!--        "TJS":14.217126,-->
<!--        "TMT":3.818249,-->
<!--        "TND":3.209553,-->
<!--        "TOP":2.467953,-->
<!--        "TRY":16.11989,-->
<!--        "TTD":7.397285,-->
<!--        "TWD":30.9955,-->
<!--        "TZS":2526.590606,-->
<!--        "UAH":32.015976,-->
<!--        "UGX":3936.686346,-->
<!--        "USD":1.090928,-->
<!--        "UYU":46.347176,-->
<!--        "UZS":12005.667716,-->
<!--        "VEF":233273468336.1702,-->
<!--        "VND":24958.260578,-->
<!--        "VUV":124.007377,-->
<!--        "WST":2.849879,-->
<!--        "XAF":648.736833,-->
<!--        "XAG":0.042228,-->
<!--        "XAU":0.000549,-->
<!--        "XCD":2.948289,-->
<!--        "XDR":0.785656,-->
<!--        "XOF":647.469951,-->
<!--        "XPF":119.402514,-->
<!--        "YER":273.005236,-->
<!--        "ZAR":16.398404,-->
<!--        "ZMK":9819.668887,-->
<!--        "ZMW":19.873912,-->
<!--        "ZWL":351.278509-->
    </string-array>
</resources>